--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "hapi": "^17.1.1",
+    "hapi-auth-jwt2": "^7.3.0",
     "jimp": "^0.2.28",
+    "jsonwebtoken": "^8.1.0",
     "moment": "^2.20.1",
     "mysql": "^2.15.0"
   }
